--- a/modul_01/02/index.html
+++ b/modul_01/02/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>JS</title>
+	<title>JS02</title>
 	<script src="js/script.js" type="text/javascript"></script>
 </head>
 <body>
