--- a/modul_11-12/carusel/index.html
+++ b/modul_11-12/carusel/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Статья про создание простой jQuery карусели</title>
+    <title>Carusel</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="js/slider.js"></script>
