--- a/modul_15-16/index.html
+++ b/modul_15-16/index.html
@@ -13,10 +13,10 @@
 
 <body>
   <div class="wrapper">
-    <form action="index.html" class="search search--main">
+    <div class="search search--main">
       <input type="text" name="searchQuery" id="searchQuery" placeholder="Что вас беспокоит?">
       <input type="submit" value="Искать" id="searchButton">
-    </form>
+    </div>
 
     <script type="text/template" id="content">
       <% for (i = 0; i < data.length; i++) { %>
